fix the damn overflow-x

--- a/static/styles.css
+++ b/static/styles.css
@@ -340,5 +340,6 @@ a {
 
 .container {
     min-width: 425px;
+    overflow-x: hidden;
     /* max-width: 960px; */
 }
